--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 title: Light Wolf Ljusdesign
 description: Freelance Ljusdesigner
+contact_url: https://goo.gl/forms/TU2JyzBx0gVaadoa2
 lang: sv-se
